# TopDownGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
CMake/: SDL2Config.cmake
Source/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp  Renderer.cpp  Renderer.h
Source/Actors/: Actor.cpp  Actor.h  ActorComponent.cpp  ActorComponent.h  MoveComponent.cpp  MoveComponent.h  SpriteComponent.cpp  SpriteComponent.h
Source/Utilities/: Math.h
